--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "index.js"
+      "src": "/src/(.*)",
+      "dest": "/src/app.js"
     }
   ]
 }
